--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
     "url": "https://github.com/n1ru4l/react-time-ago"
   },
   "license": "MIT",
-  "module": "./src/index.js",
+  "module": "./lib/index.js",
   "main": "./lib/bundle.umd.js",
   "files": [
     "lib",
-    "src/index.js",
     "README.md",
     "LICENSE"
   ],
   "devDependencies": {
+    "@babel/cli": "7.0.0-beta.51",
     "@babel/core": "7.0.0-beta.51",
     "@babel/plugin-transform-flow-strip-types": "7.0.0-beta.51",
     "@babel/preset-env": "7.0.0-beta.51",
@@ -36,12 +36,14 @@
     "babel-jest": "23.0.1",
     "commitizen": "2.10.1",
     "condition-circle": "2.0.1",
+    "cross-env": "5.2.0",
     "cz-conventional-changelog": "2.1.0",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
     "eslint": "4.19.1",
     "eslint-plugin-jest": "21.17.0",
     "flow-bin": "0.74.0",
+    "flow-copy-source": "2.0.0",
     "husky": "0.14.3",
     "jest": "23.1.0",
     "lint-staged": "7.2.0",
@@ -50,6 +52,7 @@
     "prettier-check": "2.0.0",
     "react": "16.4.1",
     "react-dom": "16.4.1",
+    "rimraf": "2.6.2",
     "rollup": "0.60.7",
     "rollup-plugin-babel": "4.0.0-beta.5",
     "semantic-release": "11.2.0"
@@ -66,7 +69,7 @@
     "cm": "git-cz",
     "precommit": "lint-staged",
     "test": "jest",
-    "build": "rollup -c",
+    "build": "rimraf lib && rollup -c && cross-env NODE_ENV=build-flow babel src/ -d lib --ignore '**/*.test.js' && flow-copy-source -i '**/*.test.js' src lib",
     "lint": "eslint --ignore-pattern .gitignore **/*.js",
     "prettier-check": "prettier-check --ignore-path .gitignore '**/*.{js,md,json}'",
     "prettier-fix": "prettier --ignore-path .gitignore --write '**/*.{js,md,json}'"
